--- a/resource/plugin/shortener/l10n/Shortener_en.properties
+++ b/resource/plugin/shortener/l10n/Shortener_en.properties
@@ -1,6 +1,6 @@
 
-Navigation.Menu.Name: Shorten Keys
-Navigation.Menu.Name.Tooltip: Shortens Freenet keys
+Navigation.Menu.Name=Shorten Keys
+Navigation.Menu.Name.Tooltip=Shortens Freenet keys
 
-Navigation.Menu.Item.Index.Name: Overview
-Navigation.Menu.Item.Index.Tooltip: Overview over all Shortener functions
+Navigation.Menu.Item.Index.Name=Overview
+Navigation.Menu.Item.Index.Tooltip=Overview over all Shortener functions
