Show currently running shortenings on index page.

--- a/resource/plugin/shortener/l10n/Shortener_en.properties
+++ b/resource/plugin/shortener/l10n/Shortener_en.properties
@@ -2,4 +2,5 @@ Navigation.Menu.Name=Shorten Keys
 Navigation.Menu.Name.Tooltip=Shortens Freenet keys
 Navigation.Menu.Item.Index.Name=Overview
 Navigation.Menu.Item.Index.Tooltip=Overview over all Shortener functions
+Page.Index.Title=Shortener Overview
 End
