--- a/resource/plugin/shortener/l10n/Shortener_en.properties
+++ b/resource/plugin/shortener/l10n/Shortener_en.properties
@@ -3,4 +3,8 @@ Navigation.Menu.Name.Tooltip=Shortens Freenet keys
 Navigation.Menu.Item.Index.Name=Overview
 Navigation.Menu.Item.Index.Tooltip=Overview over all Shortener functions
 Page.Index.Title=Shortener Overview
+Page.InvalidFormPassword.Title=Invalid Form Password
+Page.InvalidFormPassword.Text=The form password that was given was invalid.
+Page.InvalidKey.Title=Invalid Key
+Page.InvalidKey.Text=The key you specified was invalid. Please enter a valid key.
 End
