Add table headers.

--- a/resource/plugin/shortener/l10n/Shortener_en.properties
+++ b/resource/plugin/shortener/l10n/Shortener_en.properties
@@ -7,4 +7,9 @@ Page.InvalidFormPassword.Title=Invalid Form Password
 Page.InvalidFormPassword.Text=The form password that was given was invalid.
 Page.InvalidKey.Title=Invalid Key
 Page.InvalidKey.Text=The key you specified was invalid. Please enter a valid key.
+Table.RunningKeys.Header.OriginalKey=Original Key
+Table.RunningKeys.Header.CurrentKey=Current Key
+Table.RunningKeys.Header.Duration=Duration
+Table.ShortenedKeys.Header.OriginalKey=Original Key
+Table.ShortenedKeys.Header.ShortenedKey=Shortened Key
 End
