Use l10n keys in template, add missing keys in l10n properties.

--- a/resource/plugin/shortener/l10n/Shortener_en.properties
+++ b/resource/plugin/shortener/l10n/Shortener_en.properties
@@ -1,3 +1,5 @@
+Form.ShortenKeys.Header=Shorten Keys
+Form.ShortenKeys.Button.Shorten=Shorten
 Navigation.Menu.Name=Shorten Keys
 Navigation.Menu.Name.Tooltip=Shortens Freenet keys
 Navigation.Menu.Item.Index.Name=Overview
@@ -7,9 +9,11 @@ Page.InvalidFormPassword.Title=Invalid Form Password
 Page.InvalidFormPassword.Text=The form password that was given was invalid.
 Page.InvalidKey.Title=Invalid Key
 Page.InvalidKey.Text=The key you specified was invalid. Please enter a valid key.
+Table.RunningKeys.Header=Key Shortenings in Progress
 Table.RunningKeys.Header.OriginalKey=Original Key
 Table.RunningKeys.Header.CurrentKey=Current Key
 Table.RunningKeys.Header.Duration=Duration
+Table.ShortenedKeys.Header=Shortened Keys
 Table.ShortenedKeys.Header.OriginalKey=Original Key
 Table.ShortenedKeys.Header.ShortenedKey=Shortened Key
 End
